--- a/config.toml
+++ b/config.toml
@@ -46,10 +46,10 @@ paginate = 5
         identifier = "showcase"
         name = "Showcase"
         url = "/showcase"
-      [[languages.en.menu.main]]
-        identifier = "portfolio"
-        name = "Portfolio"
-        url = "/portfolio"
+#      [[languages.en.menu.main]]
+#        identifier = "portfolio"
+#        name = "Portfolio"
+#        url = "/portfolio"
       [[languages.en.menu.main]]
         identifier = "posts"
         name = "Posts"
